src/test/resources/scripts/language/parser/valid/function/asArg/nestedFunctionAsArg.sbsc
test = (a: fun<fun<num -> int>>) -> {
    a((b: num): int -> {
        return int(b + 4.4);
    });
};

return true;