src/test/resources/scripts/language/parser/invalid/multiReturn.sbsc
a = (b: bool): bool -> {
    return true;
    return b;
};

return false;